Updated ibea description and contributions template

--- a/latex/contributions-template.tex
+++ b/latex/contributions-template.tex
@@ -1,39 +1,35 @@
 \documentclass{article}
 \usepackage{xcolor}
 \usepackage{url}
-
-\newcommand{\REPLACE}[1]{{\color{red} #1}}
-\newcommand{\REMOVE}[1]{{\color{red} #1}}
-
+\usepackage{helvet}
+\usepackage{geometry}
+\geometry{hmargin=2.5cm,vmargin=1.5cm}
 \begin{document}
-
 \title{Statements of Individual Contributions}
-
-\author{Homer Simpson, Marge Simpson, Bart Simpson,\\ Lisa Simpson, and Maggie Simpson}
+\author{Karim Kouki, Ahmed Mazari, Daro Ozad, \\ Mihaela Sorostinean, Aris Tritas}
 \maketitle
 \begin{abstract}
-This document details the individual contributions of each group member to the outcome of the group project, benchmarking \REPLACE{our algorithm} with the COCO platform. It also includes an anti-plagiarism phrase that needs to be signed by every group member.
+This document details the individual contributions of each group member to the outcome of the group project, benchmarking ``Indicator-based Evolutionary Algorithm with Epsilon indicator'' with the COCO platform. It also includes an anti-plagiarism phrase that needs to be signed by every group member.
 \end{abstract}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Individual Contributions to the Group}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\REPLACE{general intro if needed}
 
-\subsection{\REPLACE{Homer Simpson}}
+\subsection*{Karim Kouki}
 I ate all the donuts.
 
-\subsection{\REPLACE{Marge Simpson}}
+\subsection*{Ahmed Mazari}
 I cooked them.
 
-\subsection{\REPLACE{Bart Simpson}}
+\subsection*{Daro Ozad}
 I hid them.
 
-\subsection{\REPLACE{Lisa Simpson}}
+\subsection*{Mihaela Sorostinean}
 I played the saxophone.
 
-\subsection{\REPLACE{Maggie Simpson}}
+\subsection*{Aris Tritas}
 I mainly slept.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -41,7 +37,7 @@ I mainly slept.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 All group work, be it the source code, the documentation, the report, the presentation, or any other contribution have been solely written by the group members or corresponding reused parts have been cited accordingly. We, the group members, confirm herewith as well that we all have read and understood the ``What is plagiarism'' page of \url{http://www.plagiarism.org/plagiarism-101/what-is-plagiarism/}.
 
-
-\REMOVE{Please sign all at the end of this document}
+Date: \today \newline
+Signatures of the group members:
 
 \end{document}
