--- a/latex/templateBIOBJarticle.tex
+++ b/latex/templateBIOBJarticle.tex
@@ -107,18 +107,18 @@
 \begin{document}
 %
 % --- Author Metadata here ---
-\conferenceinfo{GECCO'17,} {July 20-24, 2017, Denver, CO, USA.}
-\CopyrightYear{2016}
-\crdata{TBA}
-\clubpenalty=10000
-\widowpenalty = 10000
+%\conferenceinfo{GECCO'17,} {July 20-24, 2017, Denver, CO, USA.}
+%\CopyrightYear{2016}
+%\crdata{TBA}
+%\clubpenalty=10000
+%\widowpenalty = 10000
 % --- End of Author Metadata ---
 
 \title{Black-Box Optimization Benchmarking Template for the Bi-Objective BBOB Test Suite
 % \titlenote{If needed}
 }
 \subtitle{Intermediate report
-\titlenote{Submission deadline: April 3rd.}}
+\titlenote{Submission deadline: October 10th.}}
 % Camera-ready paper due by May 4th.
 
 %
@@ -163,21 +163,21 @@
 %
 % 1st. author
 \alignauthor
-Forename Name\\ %\titlenote{Dr.~Trovato insisted his name be first.}\\
+Karim Kouki %\titlenote{Dr.~Trovato insisted his name be first.}\\
 %       \affaddr{Institute for Clarity in Documentation}\\
 %       \affaddr{1932 Wallamaloo Lane}\\
 %       \affaddr{Wallamaloo, New Zealand}\\
 %       \email{trovato@corporation.com}
 %% 2nd. author
-%\alignauthor
-%G.K.M. Tobin\titlenote{The secretary disavows
+\alignauthor
+Ahmed Mazari %\titlenote{The secretary disavows
 %any knowledge of this author's actions.}\\
 %       \affaddr{Institute for Clarity in Documentation}\\
 %       \affaddr{P.O. Box 1212}\\
 %       \affaddr{Dublin, Ohio 43017-6221}\\
 %       \email{webmaster@marysville-ohio.com}
 %% 3rd. author
-%\alignauthor Lars Th{\o}rv{\"a}ld\titlenote{This author is the
+\alignauthor Daro Ozad %\titlenote{This author is the
 %one who did all the really hard work.}\\
 %       \affaddr{The Th{\o}rv{\"a}ld Group}\\
 %       \affaddr{1 Th{\o}rv{\"a}ld Circle}\\
@@ -185,13 +185,14 @@ Forename Name\\ %\titlenote{Dr.~Trovato insisted his name be first.}\\
 %       \email{larst@affiliation.org}
 %\and  % use '\and' if you need 'another row' of author names
 %% 4th. author
-%\alignauthor Lawrence P. Leipuner\\
+\and
+\alignauthor Mihaela Sorostinean
 %       \affaddr{Brookhaven Laboratories}\\
 %       \affaddr{Brookhaven National Lab}\\
 %       \affaddr{P.O. Box 5000}\\
 %       \email{lleipuner@researchlabs.org}
 %% 5th. author
-%\alignauthor Sean Fogarty\\
+\alignauthor Aris Tritas
 %       \affaddr{NASA Ames Research Center}\\
 %       \affaddr{Moffett Field}\\
 %       \affaddr{California 94035}\\
@@ -200,7 +201,8 @@ Forename Name\\ %\titlenote{Dr.~Trovato insisted his name be first.}\\
 
 \maketitle
 \begin{abstract}
-to be written
+The purpose of our project is to implement and benchmark the Indicator Based Evolutionary Algorithm (IBEA) using  the Comparing Continuous Optimizer (COCO) platform.
+
 \end{abstract}
 
 % Add any ACM category that you feel is needed, not mandatory anymore
@@ -215,16 +217,56 @@ to be written
 \keywords{Benchmarking, Black-box optimization, Bi-objective optimization}
 
 \section{Introduction}
+In the context of a multi-objective optimization, the main goal is to find a good approximation of the set of Pareto-optimal solutions. IBEA defines an optimization goal using a performance measure, in our case and indicator of the relative quality of two sets of solution vectors with respect to the Pareto front. The fitness of an approximation set is defined as a dominance-preserving relation, and is computed with the epsilon indicator function. Since defining what a good approximation means is highly user dependent, the authors propose an algorithm which adapts to arbitrary preference information and optimization scenarios while removing the need to add diversity preservation techniques. As the authors noted in the paper, the main advantages of IBEA are:
+\begin{itemize}
+\item Generalization: the population size can be arbitrary, and
+\item Speed: the comparisons are done between pairs of individuals and not between sets of candidate solution vectors.
+\end{itemize}
+
+In turn, Adaptive-IBEA scales the objective function values as well as the range of values taken by the indicator function. This scheme decreases the need parameter tuning in face of problem and indicator function diversity.
+
+Also, the authors reported a significant improvement in the quality of the resulted Pareto-set approximation with respect to the optimization goal.
 
  \section{Algorithm Presentation}
+The input of the algorithm is the size of the population ($\alpha$), a maximum number of generations (corresponding to the budget) set as termination criterion and a fitness scaling factor ($\kappa$). The output of the algorithm is an approximation of the Pareto-set.
+\begin{enumerate}
+\item \textbf{Initialization:} consists in randomly generating an initial population P of the given size  and setting a generation counter m to 0.
+\item \textbf{Fitness assignment:} is represented by the computation and assignment of  a fitness value for each individual in P; this fitness value is a measure of usefulness of each individual in regard to the optimization goal, so the algorithm tries to maximize it.
+
+\item \textbf{Environmental selection:} consists of iteratively detecting and removing  the individual which has the smallest fitness value form the population and then updating the fitness values for all remaining individuals  until the current size of the population P does not exceed $\alpha$.
+
+\item \textbf{Termination:} after the environmental selection is performed, the termination criterion of the algorithm is checked; if the maximum number of generations is reached or another termination criterion is met, the algorithm returns the set of decision vectors A.
+
+\item \textbf{Mating Selection:} consists in creating as temporary mating pool P’ which is filled with individuals from P by performing binary tournament selection with replacement on P.
+
+\item \textbf{Variation:} finally the variation step consists applying recombination and mutation operators to the previously created mating pool. In this case, the operator SBX-20 was chosen for the recombination part, while a polynomial distribution was used for the mutation part.  The offspring resulted after applying these operators is added to P, while also incrementing the generation counter. The algorithm is then performed again from step 2, until a termination criterion is met.
+
+\end{enumerate}
 
  \section{Experimental Procedure}
+ For the first part of the project our milestone was to have a working version of the algorithm, and potentially reasonable results on at least some groups of functions.
+ 
+Needless to say, to begin with, a thorough understanding of the problem's setting is required. As such, the first step was to have both individual and group readings of the paper. 
+
+As far as the implementation in Python is concerned we chose to represent the population in a compact data structure and did all numerical computation with NumPy. The steps of the algorithm were inlined in a single optimization function, except for the recombination and mutation operators which were implemented in separate functions to achieve modularity during testing.
+
+We tried intermediate weighting and discrete recombination before implementing the Simulated Binary Crossover operator. However, results using these operators were not encouraging. The reason for that may be a rather naive exploration of the search space.
+
+For the mutation step, we simply added isotropic Gaussian noise with fixed variance to the produced offspring. However, it is well known that fixing variance does not speed up search optimally.
+Without further changes to the original strategy, our algorithm does not seem to reach the optimal Pareto set of solution vectors. We tried applying recombination and mutation with high and low probabilities respectively, following the literature. This did not yield improved results, which leads us to think that either our implementation lacks robustness, or has a subtle bug.
+
+Going forward, we intend to:
+\begin{enumerate}
+\item Further test and validate the robustness of the current implementation
+\item Experiment with self-adaptive strategies for the mutation step, and potentially
+\item Implement Self-Adaptive SBX which seeks an optimal index for the approximation distribution used
+\end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{CPU Timing}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % note that the following text is just a proposal and can/should be changed to your needs:
-In order to evaluate the CPU timing of the algorithm, we have run the \algname with restarts on the entire bbob-biobj test suite \cite{biobj2016func} for $2 D$ function evaluations. The Python code was run on a Intel(R) Core(TM) i5-2400S CPU @ 2.50GHz} with 4 processors and 8 cores. The time per function evaluation for dimensions 2, 3, 5, 10, 20 equals \change{$x.x$}, \change{$x.x$}, \change{$x.x$}, \change{$xx$}, \change{$xxx$}\change{, and $xxx$} seconds respectively. 
+In order to evaluate the CPU timing of the algorithm, we have run the \algname with restarts on the entire bbob-biobj test suite \cite{biobj2016func} for $2 D$ function evaluations. The Python code was run on a Intel(R) Core(TM) i5-2400S CPU @ 2.50GHz with 4 processors and 8 cores. The time per function evaluation for dimensions 2, 3, 5, 10, 20 equals $1.7e-03$, $1.9e-03$, $2.0e-03$, $2.2e-03$, $2.4e-03$ seconds respectively. 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -234,7 +276,7 @@ In order to evaluate the CPU timing of the algorithm, we have run the \algname w
 Results of \algname\ from experiments according to \cite{hansen2016exp}, \cite{hansen2016perfass} and \cite{biobj2016perfass} on the benchmark
 functions given in \cite{biobj2016func} are presented in
 Figures~\ref{fig:ECDFsingleOne}, \ref{fig:ECDFsingleTwo}, \ref{fig:ECDFsingleThree}, and \ref{fig:ECDFsGroups}, and in
-Table~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016cocoplat}, version \change{1.0.1}, the plots were produced with version \change{1.0.4}.
+Table~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016cocoplat}, version 1.0.1, the plots were produced with version 1.0.4.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -394,10 +436,10 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \parbox{0.499\textwidth}{\centering
    {\small 5-D}\\
    \input{\bbobdatapath\algfolder pptable_05D_noiselessall}}%
-\parbox{0.499\textwidth}{\centering
-   {\small 20-D}\\
-   \input{\bbobdatapath\algfolder pptable_20D_noiselessall}}}%
-\caption[Table of aRTs]{\label{tab:aRTs}\bbobpptablecaption{} 
+%\parbox{0.499\textwidth}{\centering
+%   {\small 20-D}\\
+%   \input{\bbobdatapath\algfolder pptable_20D_noiselessall}}}%
+%\caption[Table of aRTs]{\label{tab:aRTs}\bbobpptablecaption{} 
 }
 \end{sidewaystable*}
 
