--- a/latex/finalReport.tex
+++ b/latex/finalReport.tex
@@ -281,6 +281,40 @@ functions given in \cite{biobj2016func} are presented in
 Figures~\ref{fig:ECDFsingleOne}, \ref{fig:ECDFsingleTwo}, \ref{fig:ECDFsingleThree}, and \ref{fig:ECDFsGroups}, and in
 Table~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016cocoplat}, version 1.0.1, the plots were produced with version 1.0.4.
 
+\subsection{Comparison of isotropic and derandomized mutation operators}
+Derandomized mutation performs better on the following functions: (initial variance is 5, mutation prob is 0.8, crossover is  SBX-5 and Pr(0.8))
+\begin{itemize}
+\item Rosenbrock function 28.
+\item Function 23
+\item Much better on functions 26 \& 34
+\item Function 2
+\end{itemize}
+By using $\alpha = 80$ and offsprings 30, better results were obtained for the following functions:
+\begin{itemize}
+\item function 13 (as well as function 12)
+\item function 16
+\item function 19
+\item 2-moderate 4-multi-modal:  no good results in function group overall except for a slight improvement with this configuration on function 25
+\end{itemize}
+Function 15: Isotropic : Variance of 5 better than variance of 10, Derandomized: Smaller population as good as isotropic with small variance
+functions 18: High recombination probability (0.8-1.0)  and smaller mutation probability (around 0.8)  (along with isotropic pop 100) and
+1-separable 4-multi-modal : high variance (10) is bad
+            5-weakly-structued: ---- ''' ----
+2-moderate 2-moderate: Variance is a critical factor. Mutation with probability 1 without adaptation of the variance gives worse results.
+Function 33: good results with relatively higher variance. Improved for a smaller population and moderate variance
+3-ill-conditioned 3-ill-conditioned: variance is not the determinating factor. Isotropic a little worse.
+Function 42: Derandomized and/or Higher population are better than pop=60
+(3-ill-conditioned 5-weakly-structured: High variance doesn't hurt w.r.t a smaller one. - Can't say much though because the problems are unstructured and hard)
+4-multi-modal 4-multi-modal : Derandomized improves a tiny bit on isotropic.
+Function 48: high variance does not perform worse, on other functions of 4-multi-modal 5-weakly-structured derandomized is better
+Functions 54, 55: Can't say much. Derandomized/Smaller variance better.
+
+Cases in which mutation with probability 0 works:
+2-moderate 5-weakly-structured:  best.
+3-ill-conditioned 5-weakly-structured: function 44 has good results
+
+For 5-d space:
+Function 53 performs very well with pop80, mut0.8, recombination1.0, derandomized
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
