--- a/latex/finalReport.tex
+++ b/latex/finalReport.tex
@@ -296,25 +296,53 @@ By using $\alpha = 80$ and offsprings 30, better results were obtained for the f
 \item function 19
 \item 2-moderate 4-multi-modal:  no good results in function group overall except for a slight improvement with this configuration on function 25
 \end{itemize}
-Function 15: Isotropic : Variance of 5 better than variance of 10, Derandomized: Smaller population as good as isotropic with small variance
-functions 18: High recombination probability (0.8-1.0)  and smaller mutation probability (around 0.8)  (along with isotropic pop 100) and
+
+Function 15: Isotropic : Variance of 5 better than variance of 10, 
+			 Derandomized: Smaller population as good as isotropic with small variance
+			 
+1-separable 2-moderate (3d): low mutation (0.1) is better for functions 12 and 13 and/or high recombination probability (>=0.8) is bad (why?)
+
 1-separable 4-multi-modal : high variance (10) is bad
-            5-weakly-structued: ---- ''' ----
-2-moderate 2-moderate: Variance is a critical factor. Mutation with probability 1 without adaptation of the variance gives worse results.
+
+1-separable 5-weakly-structured
+function 18: High recombination probability (0.7-0.9)
+			  High mutation probability (around 0.7-0.8)  (along with isotropic pop 100)
+			  High variance is bad
+
+2-moderate 2-moderate: 
+Variance is a critical factor. 
+Mutation with probability 1 without adaptation of the variance gives worse results.
+Function 20 gives good results with mut0.3 in 5d - best mut0.3_recomb0.7 
+28-2d as good for pop100_offs20_mut0.1_recomb0.7_var5.0 as for pop100_offs20_mut0.8_recomb0.6
+
+2-moderate 5-weakly-structured
+Better results with low mutation probability (0.1-0.3)
 Function 33: good results with relatively higher variance. Improved for a smaller population and moderate variance
+26, 33: best with mut0.8_recomb0.6
+
 3-ill-conditioned 3-ill-conditioned: variance is not the determinating factor. Isotropic a little worse.
+
 Function 42: Derandomized and/or Higher population are better than pop=60
+
 (3-ill-conditioned 5-weakly-structured: High variance doesn't hurt w.r.t a smaller one. - Can't say much though because the problems are unstructured and hard)
+
 4-multi-modal 4-multi-modal : Derandomized improves a tiny bit on isotropic.
-Function 48: high variance does not perform worse, on other functions of 4-multi-modal 5-weakly-structured derandomized is better
+4-multi-modal 5-weakly-structured: Function 48: high variance does not perform worse, 
+								    on other functions of  derandomized is better
+								    
 Functions 54, 55: Can't say much. Derandomized/Smaller variance better.
 
-Cases in which mutation with probability 0 works:
-2-moderate 5-weakly-structured:  best.
+Cases in which low mutation probability works:
+2-moderate 5-weakly-structured: best is 0.3
 3-ill-conditioned 5-weakly-structured: function 44 has good results
 
 For 5-d space:
 Function 53 performs very well with pop80, mut0.8, recombination1.0, derandomized
+On the other hand it performs well with low mutation probability (0.1-0.3) on 3d
+
+\subsection{aRT}
+ibea_pop100_offs20_mut0.1_recomb0.7_var5.0derandomized_sbx5_max_gen200_on_bbob-biobj_budget1000xD
+gets to 10-3 on f12
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
