Adding ES Review to the bibliography

--- a/latex/final_report/report.bib
+++ b/latex/final_report/report.bib
@@ -51,4 +51,10 @@
   journal={arXiv preprint arXiv:1605.01746},
   year={2016}
 }
+@article{es2015,
+  title={Evolution Strategies},
+  author={Hansen, Nikolaus and and Arnold V., Dirk and Auger, Anne},
+  year={2015}
+}
+
 
