Ignoring contrib and updating some bib ref

--- a/latex/final_report/report.bib
+++ b/latex/final_report/report.bib
@@ -51,10 +51,14 @@
   journal={arXiv preprint arXiv:1605.01746},
   year={2016}
 }
-@article{es2015,
-  title={Evolution Strategies},
-  author={Hansen, Nikolaus and and Arnold V., Dirk and Auger, Anne},
-  year={2015}
+                  
+@article{hansen2015evolution,
+  title={Evolution strategies},
+  author={Hansen, Nikolaus and Arnold, Dirk V and Auger, Anne},
+  booktitle={Springer Handbook of Computational Intelligence},
+  pages={871--898},
+  year={2015},
+  publisher={Springer}
 }
 
 
